syntax = "proto3";
package axelar.vote.exported.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/vote/exported";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option (gogoproto.goproto_getters_all) = false;

// PollKey represents the key data for a poll
message PollKey {
  option deprecated = true;
  option (gogoproto.goproto_stringer) = false;

  string module = 1;
  string id = 2 [ (gogoproto.customname) = "ID" ];
}

enum PollState {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  POLL_STATE_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "NonExistent" ];
  POLL_STATE_PENDING = 1 [ (gogoproto.enumvalue_customname) = "Pending" ];
  POLL_STATE_COMPLETED = 2 [ (gogoproto.enumvalue_customname) = "Completed" ];
  POLL_STATE_FAILED = 3 [ (gogoproto.enumvalue_customname) = "Failed" ];
}

message PollModuleMetadata {
  string module = 1;
  google.protobuf.Any metadata = 2
      [ (cosmos_proto.accepts_interface) =
            "github.com/cosmos/codec/ProtoMarshaler" ];
}
